# pybox

./: .gitignore  Pipfile  README.md  commands  pyproject.toml  requirements.txt  scraper.py  topics.yml  topics2.yml
batch/: dataset_generator.py  testing_sample.csv
challenges/: addt_two_numbers.py  max_area_brute_force.py  max_area_improved.py  two_sum.py
diagrams/: api_arch.py  test.py
labs/: chaos.py  code_to_prompt.py  job_recommendation_prompt.py  job_recommendation_user_preferences.py  job_seeker.py  notes.py  weaviate_lab.py
labs/backend/api/: urls.py
labs/backend/backend/: settings.py  urls.py
labs/rest/: main.py  models.py
templates/: topics.yml.j2
tutorial/: quotes-www.earthdata.nasa.gov.html
tutorial/tutorial/spiders/: nasa.py
